tdf#157289 normalize ellipse bounding box in oox export

The predefined geometry of a circular arrow shape has bottom-right
vertex first and then top-left vertex of the bounding box of the
ellipse. We now use the normalized rectangle to calculate the radii of
the ellipse. Before this patch the calculation had resulted in negative
radii.

Because the ODF standard only states, '(x1, y1) and (x2, y2) define the
bounding box of an ellipse.', but not which vertices to use, the fix is
not made in changing the geometry of the circular arrow. Instead the
export is changed to use the normalized rectangle. That is more general
and will cover other shape types too. Especially non-primivite shapes
might use other vertices than top-left and bottom-right to determine
the ellipse.

Change-Id: Ica859c9adc508a6517e30f111cd54518ec9929a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157526
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit 10c7bc0c824697b92c22bddacd739de9127dc80e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157534
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157586